@@ -37,6 +37,7 @@
 - Fix: [#22339] Printing ui.tool.cursor in console crashes the game.
 - Fix: [#22348] Progress bar screen doesn’t handle window resizing.
 - Fix: [#22389] Alpine coaster has wrong tunnel entrance type.
+- Fix: [#22435] [Plugin] Off-by-one pixel issue in active widget width and height setters.
 
 0.4.12 (2024-07-07)
 ------------------------------------------------------------------------
